feat(ashoot): rename package

--- a/packages/ashoot/package.json
+++ b/packages/ashoot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ashoot",
+  "name": "@lostvita/ashoot",
   "version": "1.0.1",
   "description": "a canvas shooting game",
   "keywords": [
