--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,6 +27,6 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: yarn publish --access=public
+      - run: yarn deploy --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
