feat(ashoot): add npm access token

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "release": "git pull && lerna version --yes --message \"chore: release\"",
-    "deploy": "lerna publish from-package --yes --no-verify-access"
+    "deploy": "lerna publish from-package --yes"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
