--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,7 +21,7 @@ jobs:
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'chore: release')"
+    if: "contains(github.event.head_commit.message, 'chore: release')"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
